@@ -4,7 +4,7 @@
 <head>
 <title>INSTALL - How to install and configure DBD::mysql</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rev="made" href="mailto:_www@b04.apple.com" />
+<link rev="made" href="mailto:root@localhost" />
 </head>
 
 <body style="background-color: white">
@@ -88,7 +88,7 @@ list.</p>
 <hr />
 <h1><a name="prerequisites">PREREQUISITES</a></h1>
 <dl>
-<dt><strong><a name="item_perl">Perl</a></strong>
+<dt><strong><a name="item_perl">Perl</a></strong></dt>
 
 <dd>
 <p>Preferrably a version of Perl, that comes preconfigured with
@@ -96,8 +96,7 @@ your system. For example, all Linux and FreeBSD distributions
 come with Perl. For Windows, ActivePerl is recommended, see
 <a href="http://www.activestate.com">http://www.activestate.com</a> for details.</p>
 </dd>
-</li>
-<dt><strong><a name="item_mysql">MySQL</a></strong>
+<dt><strong><a name="item_mysql">MySQL</a></strong></dt>
 
 <dd>
 <p>You need not install the actual MySQL database server, the
@@ -107,12 +106,8 @@ example, Fedora Core 4 Linux distribution comes with RPM files
 to find exact package names). These are sufficient, if the MySQL 
 server is located on a foreign machine.  You may also create client
 files by compiling from the MySQL source distribution and using</p>
-</dd>
-<dd>
 <pre>
   configure --without-server</pre>
-</dd>
-<dd>
 <p>If you are using Windows and need to compile from sources
 (which is only the case if you are not using ActivePerl),
 then you must ensure that the header and library files are
@@ -120,16 +115,14 @@ installed. This may require choosing a ``Custom installation''
 and selecting the appropriate option when running the
 MySQL setup program.</p>
 </dd>
-</li>
-<dt><strong><a name="item_dbi">DBI</a></strong>
+<dt><strong><a name="item_dbi">DBI</a></strong></dt>
 
 <dd>
 <p>DBD::mysql is a DBI driver, hence you need DBI. It is available
 from the same source where you got the DBD::mysql distribution
 from.</p>
 </dd>
-</li>
-<dt><strong><a name="item_c_compiler">C compiler</a></strong>
+<dt><strong><a name="item_c_compiler">C compiler</a></strong></dt>
 
 <dd>
 <p>A C compiler is only required, if you install from source. In
@@ -138,21 +131,17 @@ available. However, if you need a C compiler, make sure, that
 it is the same C compiler that was used for compiling Perl and
 MySQL! Otherwise you will almost definitely encounter problems
 because of differences in the underlying C runtime libraries.</p>
-</dd>
-<dd>
 <p>In the worst case, this might mean to compile Perl and MySQL
 yourself. But believe me, experience shows that a lot of problems
 are fixed this way.</p>
 </dd>
-</li>
-<dt><strong><a name="item_gzip_libraries">Gzip libraries</a></strong>
+<dt><strong><a name="item_gzip_libraries">Gzip libraries</a></strong></dt>
 
 <dd>
 <p>Late versions of MySQL come with support for compression. Thus
 it <strong>may</strong> be required that you have install an RPM package like
 libz-devel, libgz-devel or something similar.</p>
 </dd>
-</li>
 </dl>
 <p>
 </p>
@@ -326,107 +315,75 @@ line, you may alternatively create a script called <code>mysql_config</code>.
 This is described later on.</p>
 <p>Available switches are:</p>
 <dl>
-<dt><strong><a name="item_testdb">testdb</a></strong>
+<dt><strong><a name="item_testdb">testdb</a></strong></dt>
 
 <dd>
 <p>Name of the test database, defaults to <strong>test</strong>.</p>
 </dd>
-</li>
-<dt><strong><a name="item_testuser">testuser</a></strong>
+<dt><strong><a name="item_testuser">testuser</a></strong></dt>
 
 <dd>
 <p>Name of the test user, defaults to empty. If the name is empty,
 then the currently logged in users name will be used.</p>
 </dd>
-</li>
-<dt><strong><a name="item_testpassword">testpassword</a></strong>
+<dt><strong><a name="item_testpassword">testpassword</a></strong></dt>
 
 <dd>
 <p>Password of the test user, defaults to empty.</p>
 </dd>
-</li>
-<dt><strong><a name="item_testhost">testhost</a></strong>
+<dt><strong><a name="item_testhost">testhost</a></strong></dt>
 
 <dd>
 <p>Host name or IP number of the test database; defaults to localhost.</p>
 </dd>
-</li>
-<dt><strong><a name="item_testport">testport</a></strong>
+<dt><strong><a name="item_testport">testport</a></strong></dt>
 
 <dd>
 <p>Port number of the test database</p>
 </dd>
-</li>
-<dt><strong><a name="item_ps_2dprotcol_3d1_or_0">ps-protcol=1 or 0</a></strong>
+<dt><strong><a name="item_ps_2dprotcol_3d1_or_0">ps-protcol=1 or 0</a></strong></dt>
 
 <dd>
 <p>Whether to run the test suite using server prepared statements or driver
 emulated prepared statemetns. ps-protocol=1 means use server prepare,
 ps-protocol=0 means driver emulated.</p>
 </dd>
-</li>
-<dt><strong><a name="item_cflags">cflags</a></strong>
+<dt><strong><a name="item_cflags">cflags</a></strong></dt>
 
 <dd>
 <p>This is a list of flags that you want to give to the C compiler.
 The most important flag is the location of the MySQL header files.
 For example, on Red Hat Linux the header files are in /usr/include/mysql
 and you might try</p>
-</dd>
-<dd>
 <pre>
   -I/usr/include/mysql</pre>
-</dd>
-<dd>
 <p>On Windows the header files may be in C:\mysql\include and you might try</p>
-</dd>
-<dd>
 <pre>
   -IC:\mysql\include</pre>
-</dd>
-<dd>
 <p>The default flags are determined by running</p>
-</dd>
-<dd>
 <pre>
   mysql_config --cflags</pre>
-</dd>
-<dd>
 <p>More details on the C compiler flags can be found in the following
 section. <a href="#compiler_flags">Compiler flags</a>.</p>
 </dd>
-</li>
-<dt><strong><a name="item_libs">libs</a></strong>
+<dt><strong><a name="item_libs">libs</a></strong></dt>
 
 <dd>
 <p>This is a list of flags that you want to give to the linker
 or loader. The most important flags are the locations and names
 of additional libraries. For example, on Red Hat Linux your
 MySQL client libraries are in /usr/lib/mysql and you might try</p>
-</dd>
-<dd>
 <pre>
   -L/usr/lib/mysql -lmysqlclient -lz</pre>
-</dd>
-<dd>
 <p>On Windows the libraries may be in C:\mysql\lib and</p>
-</dd>
-<dd>
 <pre>
   -LC:\mysql\lib -lmysqlclient</pre>
-</dd>
-<dd>
 <p>might be a good choice. The default flags are determined by running</p>
-</dd>
-<dd>
 <pre>
   mysql_config --libs</pre>
-</dd>
-<dd>
 <p>More details on the linker flags can be found in a separate section.
 <a href="#linker_flags">Linker flags</a>.</p>
 </dd>
-</li>
 </dl>
 <p>If a switch is not present on the command line, then the
 script <code>mysql_config</code> will be executed. This script comes
@@ -488,52 +445,34 @@ flags, for example like this:</p>
 <p>The following items typically need to be configured for the
 linker:</p>
 <dl>
-<dt><strong><a name="item_the_mysqlclient_library">The mysqlclient library</a></strong>
+<dt><strong><a name="item_the_mysqlclient_library">The mysqlclient library</a></strong></dt>
 
 <dd>
 <p>The MySQL client library comes as part of the MySQL distribution.
 Depending on your system it may be a file called</p>
-</dd>
-<dd>
 <pre>
   F&lt;libmysqlclient.a&gt;   statically linked library, Unix
   F&lt;libmysqlclient.so&gt;  dynamically linked library, Unix
   F&lt;mysqlclient.lib&gt;    statically linked library, Windows
   F&lt;mysqlclient.dll&gt;    dynamically linked library, Windows</pre>
-</dd>
-<dd>
 <p>or something similar.</p>
-</dd>
-<dd>
 <p>As in the case of the header files, the client library is typically
 not installed by default. On Windows you will need to select them
 while running the MySQL setup program (Custom installation). On
 Red Hat Linux an RPM archive <em>mysql-devel</em> or <em>MySQL-devel</em> must
 be installed.</p>
-</dd>
-<dd>
 <p>The linker needs to know the location and name of the mysqlclient
 library. This can be done by adding the flags</p>
-</dd>
-<dd>
 <pre>
   -L&lt;lib directory&gt; -lmysqlclient</pre>
-</dd>
-<dd>
 <p>or by adding the complete path name. Examples:</p>
-</dd>
-<dd>
 <pre>
   -L/usr/lib/mysql -lmysqlclient
   -LC:\mysql\lib -lmysqlclient</pre>
-</dd>
-<dd>
 <p>If you would like to use the static libraries (and there are
 excellent reasons to do so), you need to create a separate
 directory, copy the static libraries to that place and use
 the -L switch above to point to your new directory. For example:</p>
-</dd>
-<dd>
 <pre>
   mkdir /tmp/mysql-static
   cp /usr/lib/mysql/*.a /tmp/mysql-static
@@ -543,28 +482,20 @@ the -L switch above to point to your new directory. For example:</p>
   make install
   rm -rf /tmp/mysql-static</pre>
 </dd>
-</li>
-<dt><strong><a name="item_the_gzip_library">The gzip library</a></strong>
+<dt><strong><a name="item_the_gzip_library">The gzip library</a></strong></dt>
 
 <dd>
 <p>The MySQL client can use compression when talking to the MySQL
 server, a nice feature when sending or receiving large texts over
 a slow network.</p>
-</dd>
-<dd>
 <p>On Unix you typically find the appropriate file name by running</p>
-</dd>
-<dd>
 <pre>
   ldconfig -p | grep libz
   ldconfig -p | grep libgz</pre>
-</dd>
-<dd>
 <p>Once you know the name (libz.a or libgz.a is best), just add it
 to the list of linker flags. If this seems to be causing problem
 you may also try to link without gzip libraries.</p>
 </dd>
-</li>
 </dl>
 <p>
 </p>
@@ -598,64 +529,53 @@ operating systems, and it is told, that the server compiled under Cygwin is
 unstable.</p>
 <p>Install MySQL (if you havn't already)</p>
 <dl>
-<dt><strong><a name="item__2d">-</a></strong>
+<dt><strong><a name="item__2d">-</a></strong></dt>
 
 <dd>
 <p>download the MySQL Windows Binaries from
 <a href="http://www.mysql.com/downloads/index.html">http://www.mysql.com/downloads/index.html</a></p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>unzip mysql-&lt;version&gt;-win.zip into some temporary location</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>start the setup.exe there and follow the instructions</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>start the server</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>alternatively download, install and start the server on a remote
 server, on what supported OS ever</p>
 </dd>
-</li>
 </dl>
 <p>Build MySQL clients under Cygwin:</p>
 <dl>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>download the MySQL LINUX source from
 <a href="http://www.mysql.com/downloads/index.html">http://www.mysql.com/downloads/index.html</a></p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>unpack mysql-&lt;version&gt;.tar.gz into some tmp location</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>cd into the unpacked dir mysql-&lt;version&gt;</p>
-</dd>
-<dd>
 <pre>
   ./configure --prefix=/usr/local/mysql --without-server</pre>
-</dd>
-<dd>
 <p>This prepares the Makefile with the installed Cygwin features. It
 takes some time, but should finish without error. The 'prefix', as
 given, installs the whole Cygwin/MySQL thingy into a location not
@@ -663,46 +583,35 @@ normally in your PATH, so that you continue to use already installed
 Windows binaries. The --without-server parameter tells configure to
 only build the clients.</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   make</pre>
-</dd>
-<dd>
 <p>This builds all MySQL client parts ... be patient. It should finish
 finally without any error.</p>
 </dd>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   make install</pre>
-</dd>
-<dd>
 <p>This installs the compiled client files under /usr/local/mysql/.
 Remember, you don't need anything except the library under
 /usr/local/mysql/lib and the headers under /usr/local/mysql/include!</p>
-</dd>
-<dd>
 <p>Essentially you are now done with this part. If you want, you may try
 your compiled binaries shortly; for that, do:</p>
 </dd>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   cd /usr/local/mysql/bin
   ./mysql -h 127.0.0.1</pre>
-</dd>
-<dd>
 <p>The host (-h) parameter 127.0.0.1 targets the local host, but forces
 the mysql client to use a TCP/IP connection. The default would be a
 pipe/socket connection (even if you say '-h localhost') and this
 doesn't work between Cygwin and Windows (as far as I know).</p>
-</dd>
-<dd>
 <p>If you have your MySQL server running on some other box, then please
 substitute '127.0.0.1' with the name or IP-number of that box.</p>
 </dd>
@@ -721,77 +630,64 @@ built lib and headers.</p>
 <p>You are now ready to build DBD::mysql!</p>
 <p>Build DBD::mysql:</p>
 <dl>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>download DBD-mysql-&lt;version&gt;.tar.gz from CPAN</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>unpack DBD-mysql-&lt;version&gt;.tar.gz</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <p>cd into unpacked dir DBD-mysql-&lt;version&gt;
 you probably did that already, if you are reading this!</p>
 </dd>
-</li>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   cp /usr/local/mysql/bin/mysql_config .</pre>
-</dd>
-<dd>
 <p>This copies the executable script mentioned in the DBD::mysql docs
 from your just built Cywin/MySQL client directory; it knows about
 your Cygwin installation, especially about the right libraries to link
 with.</p>
 </dd>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   perl Makefile.PL --testhost=127.0.0.1</pre>
-</dd>
-<dd>
 <p>The --testhost=127.0.0.1 parameter again forces a TCP/IP connection
 to the MySQL server on the local host instead of a pipe/socket
 connection for the 'make test' phase.</p>
 </dd>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   make</pre>
-</dd>
-<dd>
 <p>This should run without error</p>
 </dd>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   make test</pre>
-</dd>
-<dd>
 <p>with DBD-mysql-2.1022 or earlier you will see several errors in
 dbdadmin.t, mysql.t and mysql2.t; with later versions you should not
 get errors (except possibly one, indicating, that some tables could
 not be dropped. I'm hunting for a solution to that problem, but have
 none yet).</p>
 </dd>
-<dt><strong>-</strong>
+<dt><strong>-</strong></dt>
 
 <dd>
 <pre>
   make install</pre>
-</dd>
-<dd>
 <p>This installs DBD::mysql into the Perl hierarchy.</p>
 </dd>
 </dl>
