@@ -50,6 +50,7 @@ t/71impdata.t
 t/75supported_sql.t
 t/76multi_statement.t
 t/80procs.t
+t/85init_command.t
 t/lib.pl
 t/mysql.dbtest
 t/mysql.mtest
