@@ -34,14 +34,16 @@ my $charset= 'DEFAULT CHARSET=utf8';
 eval {$dbh = DBI->connect($test_dsn, $test_user, $test_password,
   { RaiseError => 1, AutoCommit => 1}) or ServerError() ;};
 
-if ($dbh->get_info($GetInfoType{SQL_DBMS_VER}) lt "4.1") {
-    $charset= '';
-}
 
 if ($@) {
     plan skip_all => "ERROR: $DBI::errstr. Can't continue test";
 }
+
 plan tests => 14;
+
+if ($dbh->get_info($GetInfoType{SQL_DBMS_VER}) lt "4.1") {
+    $charset= '';
+}
 
 my $size= 128;
 
